se cambio el nombre

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SMC",
-  "name": "SMC app",
+  "short_name": "xmas",
+  "name": "Card Happy Christmas",
   "icons": [
     {
       "src": "x-mas.png",
